# CPP_Anime_API

./: .clang-format  .gitignore  CMakeLists.txt  README.md
web_cpp/: CmakeLists.txt
web_cpp/src/: CMakeLists.txt  anime.hpp  main.cpp
